resource-quota/task12/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: clusterip-ingress
  namespace: practice-f-sadatov
spec:
  ingressClassName: nginx
  rules:
  - host: todo-f-sadatov.sts404.uz
    http:
      paths:
      - backend:
          service:
            name: flask-app-v4
            port:
              number: 80
        path: /practice
        pathType: Exact
status:
  loadBalancer: {}
